[BUGFIX] Remove flickering in page module
There is a small flickering effect in page module.

How to reproduce
- Switch to "language"
- Have some content elements in default language
- have one hidden (!) content element in a 2nd language.
- hover the hidden element.

Flickering is because a 1px border is only shown when hovering.

Solution:
set same border color as the background

Fixes: #43296
Releases: 6.0

--- a/typo3/sysext/t3skin/stylesheets/visual/module_web_page.css
+++ b/typo3/sysext/t3skin/stylesheets/visual/module_web_page.css
@@ -92,7 +92,7 @@ Web > Page
 
 .t3-page-ce-hidden .t3-page-ce-body {
 	background-color: transparent;
-	border-style: none;
+	border-color: #F1F1F1;
 }
 
 .t3-page-ce-hidden .t3-page-ce-body .t3-icon ,
